# slonik-7b

./: .env.example  .gitignore  README.md  checkpoints  data  outputs  pyproject.toml  requirements.txt
.github/workflows/: eval_regression.yml  tests.yml
configs/: datasets.yaml  grpo.yaml  sft_qlora.yaml  vllm_serve.yaml
docker/: Dockerfile.serve  Dockerfile.train
notebooks/: 01_baseline_and_setup.ipynb  02_sft_training_results.ipynb  03_grpo_results_and_comparison.ipynb  04_error_analysis.ipynb
results/: GRPO_2K_RESULTS.txt  bird_pg_results.jsonl  bird_pg_results_grpo2k.jsonl  bird_sqlite_results.jsonl  bird_sqlite_results_2k.jsonl
scripts/: download_data.py  eval_bird_pg.py  eval_bird_sqlite.py  eval_full.py  eval_no_vllm.py  install.ps1  judge_predictions.py  push_release.py  serve_local.py  train_grpo.py  train_sft.py  verify.py
scripts/helpers/: grpo-finish-and-eval.sh  grpo-finish-eval-both.sh  grpo-procs.sh  grpo-watch.sh  hf-check-upload.sh  slonik.sh  status.sh
src/slonik/data/: chatml.py  prepare_bird.py  prepare_gretel.py  prepare_spider.py  schema.py  synthesize_pg_modern.py
src/slonik/demo/: app.py
src/slonik/eval/: bird_runner.py  compare.py  exec_accuracy.py  spider_runner.py
src/slonik/publish/: convert_gguf.py  modelcard.md  push_to_hub.py
src/slonik/serve/: api.py  observability.py  prompts.py  sql_validator.py
src/slonik/training/: exec_sandbox.py  grpo.py  merge_adapter.py  rewards.py  sft.py
tests/: test_api.py  test_chatml.py  test_rewards.py  test_sandbox.py
